syntax = "proto3";

package myservice;

service RustService {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayGoodbye (GoodbyeRequest) returns (GoodbyeReply);
  rpc AddSpecies (AddSpeciesRequest) returns (AddSpeciesReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message GoodbyeRequest {
  string name = 1;
}

message GoodbyeReply {
  string message = 1;
}

message AddSpeciesRequest {
  string name = 1;
  string description = 2;
  int64 population = 3;
}

message AddSpeciesReply {
  string status = 1;
}

